--- a/src/Legal/templates/legal_admin_modifyconfig.htm
+++ b/src/Legal/templates/legal_admin_modifyconfig.htm
@@ -25,7 +25,7 @@
                     <label for="legal_resetagreement">{gt text="Reset user group's acceptance of 'Terms of use'"}</label>
                     <select id="legal_resetagreement" name="resetagreement">
                         {foreach item=group from=$groups}
-                        <option value="{$group.gid|varprepfordisplay}">{$group.name|varprepfordisplay}</option>
+                        <option value="{$group.gid|safetext}">{$group.name|safetext}</option>
                         {/foreach}
                     </select>
                     <p class="z-formnote z-informationmsg">{gt text="Notice: This setting resets the acceptance of the 'Terms of use' for all users in this group. Next time they want to log-in, they will have to acknowledge their acceptance of them again, and will not be able to log-in if they do not. This action does not affect the main administrator account. You can perform the same operation for individual users by visiting the Users manager in the site admin panel."}</p>
