--- a/Resources/views/en/termsOfUse.html.twig
+++ b/Resources/views/en/termsOfUse.html.twig
@@ -1,6 +1,6 @@
 <h2>1. Acceptance of terms of use and amendments</h2>
 <p>
-    Each time you visit, use or cause access to this site, you agree to be bound by these 'Terms of use', as amended from time to time with or without notice to you. In addition, your usage of services on this site or accessed via this site will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these 'Terms of use'. Please read the site's {legalinlinelink policyType='privacyPolicy'}, which is also incorporated within these 'Terms of use' by reference.
+    Each time you visit, use or cause access to this site, you agree to be bound by these 'Terms of use', as amended from time to time with or without notice to you. In addition, your usage of services on this site or accessed via this site will be subject to any rules or guidelines applicable to those services, and they will be incorporated by reference within these 'Terms of use'. Please read the site's {{ zikulalegalmodule_inlineLink(policyType='privacyPolicy') }}, which is also incorporated within these 'Terms of use' by reference.
 </p>
 
 <h2>2. The site operator's service</h2>
@@ -9,12 +9,12 @@
 </p>
 <h2>3. Your responsibilities and registration obligations</h2>
 <p>
-    In order to use this site or certain parts of it, you may be required to <a href="{modurl modname="Users" type="user" func="register"}">register for a user account</a> on this site; in this case, you agree to provide truthful information when requested, and - if a minimum age is required for eligibility for a user account - you undertake that you are of at least the required age. By registering for a user account, you explicitly agree to this site's 'Terms of use' and {legalinlinelink policyType='privacyPolicy'}, including any amendments made by the site operator that are published herein.
+    In order to use this site or certain parts of it, you may be required to <a href="{{ path('zikulausersmodule_registration_register') }}" title="Registration page">register for a user account</a> on this site; in this case, you agree to provide truthful information when requested, and - if a minimum age is required for eligibility for a user account - you undertake that you are of at least the required age. By registering for a user account, you explicitly agree to this site's 'Terms of use' and {{ zikulalegalmodule_inlineLink(policyType='privacyPolicy') }}, including any amendments made by the site operator that are published herein.
 </p>
 
 <h2>4. Privacy policy</h2>
 <p>
-    Registration data and other personally identifiable information that the site may collect is subject to the terms of the site operator's {legalinlinelink policyType='privacyPolicy'}.
+    Registration data and other personally identifiable information that the site may collect is subject to the terms of the site operator's {{ zikulalegalmodule_inlineLink(policyType='privacyPolicy') }}.
 </p>
 <h2>5. Registration and password</h2>
 <p>
@@ -25,7 +25,7 @@
 </p>
 <h2>6. Your conduct</h2>
 <p>
-    You agree that all information or data of any kind, whether text, software, code, music or audio, photographs or graphics, video or animations, or other materials ('content'), made available publicly or privately, will be under the sole responsibility of the person providing the said content, or of the person whose user account is used. You agree that this site might expose you to content that may be objectionable or offensive. The site operator will not be responsible to you in any way for content provided on this site, nor for any error or omission. However, if you do see content on this site that you feel is offensive or inappropriate, please <a href="mailto:{$modvars.ZConfig.adminmail}">e-mail the site administrator</a>.
+    You agree that all information or data of any kind, whether text, software, code, music or audio, photographs or graphics, video or animations, or other materials ('content'), made available publicly or privately, will be under the sole responsibility of the person providing the said content, or of the person whose user account is used. You agree that this site might expose you to content that may be objectionable or offensive. The site operator will not be responsible to you in any way for content provided on this site, nor for any error or omission. However, if you do see content on this site that you feel is offensive or inappropriate, please <a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
 </p>
 <p>
     By using this site or any service provided, you explicitly agree to the following clauses:
@@ -65,10 +65,10 @@
 </ol>
 
 <p>
-    Failure to comply with any of the clauses of this section 6 of these 'Terms of use' will be considered to be just cause for immediate closure of your user account, and may render you liable to legal action. For more information about user account closure, please refer to the site's {legalinlinelink policyType='privacyPolicy'}.
+    Failure to comply with any of the clauses of this section 6 of these 'Terms of use' will be considered to be just cause for immediate closure of your user account, and may render you liable to legal action. For more information about user account closure, please refer to the site's {{ zikulalegalmodule_inlineLink(policyType='privacyPolicy') }}.
 </p>
 <p>
-    If you become aware of any infringement of these 'Terms of use' by a registered user of this site, please <a href="mailto:{$modvars.ZConfig.adminmail}">e-mail the site administrator</a>.
+    If you become aware of any infringement of these 'Terms of use' by a registered user of this site, please <a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
 </p>
 
 <h2>7. Submission of content on this site</h2>
@@ -122,7 +122,7 @@
     If you believe that your property has been used in any way that could be considered a copyright infringement or a violation of your intellectual property rights, the site operator's copyright agent can be contacted via:
 </p>
 <ul>
-    <li><a href="mailto:{$modvars.ZConfig.adminmail}">E-mail to the site administrator</a>.</li>
+    <li><a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">E-mail to the site administrator</a>.</li>
 </ul>
 
 <!-- **NOTE: You are supposed to provide a name and mailing address -->
@@ -162,4 +162,5 @@
     <li>In the event that any provision of these 'Terms of use' is deemed to conflict with legislation by a court with jurisdiction over the parties, the said provision will be interpreted to reflect the original intentions of the parties in accordance with applicable law, and the remainder of these 'Terms of use' will remain valid and applicable.</li>
     <li>The failure of either party to assert any right under these 'Terms of use' will not be considered to be a waiver of that party's right, and the said right will remain in full force and effect.</li>
     <li>You agree that any claim or cause in respect of this site or its services must be filed within one (1) year after such claim or cause arose, or the said claim or cause will be forever barred, without regard to any contrary legislation.</li>
-<li>The site operator may assign the site operator's rights and obligations under these 'Terms of use'; in this event, the site operator will be relieved of any further obligation.</li></ol>
+    <li>The site operator may assign the site operator's rights and obligations under these 'Terms of use'; in this event, the site operator will be relieved of any further obligation.</li>
+</ol>
