--- a/Resources/views/InlineLink/accessibilityStatement.html.twig
+++ b/Resources/views/InlineLink/accessibilityStatement.html.twig
@@ -1,2 +1,5 @@
-{% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_ACCESSIBILITY_URL'), path('zikulalegalmodule_user_accessibilitystatement')) %}
+{% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_ACCESSIBILITY_URL')) %}
+{% if policyUrl == '' %}
+    {% set policyUrl = path('zikulalegalmodule_user_accessibilitystatement') %}
+{% endif %}
 <a class="legal_inlinelink_accessibilitystatement" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{{ __('Accessibility statement') }}</a>
