--- a/Resources/views/InlineLink/tradeConditions.html.twig
+++ b/Resources/views/InlineLink/tradeConditions.html.twig
@@ -1,2 +1,5 @@
-{% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL'), path('zikulalegalmodule_user_tradeconditions')) %}
+{% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL') %}
+{% if policyUrl == '' %}
+    {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
+{% endif %}
 <a class="legal_inlinelink_tradeconditions" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{{ __('General terms and conditions of trade') }}</a>
