--- a/Resources/views/UsersUI/edit.html.twig
+++ b/Resources/views/UsersUI/edit.html.twig
@@ -5,7 +5,10 @@
     <input type="hidden" id="acceptpolicies_csrftoken" name="acceptpolicies_csrftoken" value="{{ csrfToken }}" />
     <input type="hidden" id="acceptpolicies_uid" name="acceptedpolicies_uid" value="{{ policiesUid }}" />
     {% if activePolicies.termsOfUse and viewablePolicies.termsOfUse %}
-        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL'), path('zikulalegalmodule_user_termsofuse')) %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_termsofuse') %}
+        {% endif %}
         {% set policyName = __('Terms of use') %}
         {% set policyLink = '<a data-toggle="modal" data-target="#modal-terms-of-use" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         {{ modalHelper.modalWindow(policyName, policyUrl, 'terms-of-use') }}
@@ -31,7 +34,10 @@
         </div>
     {% endif %}
     {% if activePolicies.privacyPolicy and viewablePolicies.privacyPolicy %}
-        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_URL'), path('zikulalegalmodule_user_privacypolicy')) %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_privacypolicy') %}
+        {% endif %}
         {% set policyName = __('Privacy policy') %}
         {% set policyLink = '<a data-toggle="modal" data-target="#modal-privacy-policy" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         {{ modalHelper.modalWindow(policyName, policyUrl, 'privacy-policy') }}
@@ -79,7 +85,10 @@
         </div>
     {% endif %}
     {% if activePolicies.tradeConditions and viewablePolicies.tradeConditions %}
-        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL'), path('zikulalegalmodule_user_tradeconditions')) %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
+        {% endif %}
         {% set policyName = __('General terms and conditions of trade') %}
         {% set policyLink = '<a data-toggle="modal" data-target="#modal-general-terms-and-conditions-of-trade" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         {{ modalHelper.modalWindow(policyName, policyUrl, 'general-terms-and-conditions-of-trade') }}
@@ -105,7 +114,10 @@
         </div>
     {% endif %}
     {% if activePolicies.cancellationRightPolicy and viewablePolicies.cancellationRightPolicy %}
-        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_CANCELLATIONRIGHTPOLICY_URL'), path('zikulalegalmodule_user_cancellationrightpolicy')) %}
+        {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_CANCELLATIONRIGHTPOLICY_URL')) %}
+        {% if policyUrl == '' %}
+            {% set policyUrl = path('zikulalegalmodule_user_cancellationrightpolicy') %}
+        {% endif %}
         {% set policyName = __('Cancellation right policy') %}
         {% set policyLink = '<a data-toggle="modal" data-target="#modal-cancellation-right-policy" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         {{ modalHelper.modalWindow(policyName, policyUrl, 'cancellation-right-policy') }}
