added styleci config, bugfixing

--- a/Resources/views/User/menu.html.twig
+++ b/Resources/views/User/menu.html.twig
@@ -1,4 +1,4 @@
 {% if templateTitle|default('') == '' %}
     {% set templateTitle = __('Legal information') %}
 {% endif %}
-{{ moduleHeader(type='user', title=templateTitle, setpagetitle=true, insertflashes=true) }}
+{{ moduleHeader(type='user', title=templateTitle, set_page_title=true, insert_flashes=true) }}
